<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".ListActivity">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp">

    <ScrollView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content">

      <TableLayout
        android:id="@+id/tableList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*">

        <TableRow
          android:layout_width="match_parent"
          android:layout_height="match_parent">

          <TextView
            android:id="@+id/txtView01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="8pt" />

          <TextView
            android:id="@+id/txtView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action"
            android:textSize="8pt" />

        </TableRow>

      </TableLayout>

    </ScrollView>

    <Button
      android:id="@+id/btnNew"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:text="@string/newContact" />

  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>